added 2 column layout

--- a/website/index.html
+++ b/website/index.html
@@ -13,7 +13,12 @@
         <a href="contact.html">Contact</a>
       </nav>
       <main>
-        <p>This is the <b>home</b> page</p>
+        <div class="column">
+          <p>This is the <b>home</b> page</p>
+        </div><!--
+        --><div class="column">
+          <p>This is the <b>home</b> page</p>
+        </div>
       </main>
     </div>
     <footer>
